@@ -3,6 +3,7 @@
 	* src/dfsch.c (dfsch_vector_2_list): Fixed segfaults in list->vector
 	(type definitions): Made types' methods static 
 	(vector_equal_p): Vector comparison
+	(vector_write): Vector writer
 
 	* New way of handling objects in memory 
 
